[gd_scene load_steps=3 format=3 uid="uid://cfkr4tbdm1m3w"]

[ext_resource type="Script" path="res://Utilities/Inventory/equipment.gd" id="1_8gl0g"]
[ext_resource type="PackedScene" uid="uid://dj0urcd0clvl4" path="res://Utilities/Inventory/slot.tscn" id="2_0wuou"]

[node name="Equipment" type="PanelContainer"]
script = ExtResource("1_8gl0g")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="SkillSlots" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="AxeSlot" parent="MarginContainer/VBoxContainer/SkillSlots" instance=ExtResource("2_0wuou")]
layout_mode = 2
slot_type = 2

[node name="PickaxeSlot" parent="MarginContainer/VBoxContainer/SkillSlots" instance=ExtResource("2_0wuou")]
layout_mode = 2
slot_type = 3

[node name="ArmorSlots" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ArmorSlot" parent="MarginContainer/VBoxContainer/ArmorSlots" instance=ExtResource("2_0wuou")]
layout_mode = 2
slot_type = 1

[node name="ArmorSlot2" parent="MarginContainer/VBoxContainer/ArmorSlots" instance=ExtResource("2_0wuou")]
layout_mode = 2
slot_type = 1

[node name="ArmorSlot3" parent="MarginContainer/VBoxContainer/ArmorSlots" instance=ExtResource("2_0wuou")]
layout_mode = 2
slot_type = 1

[node name="ArmorSlot4" parent="MarginContainer/VBoxContainer/ArmorSlots" instance=ExtResource("2_0wuou")]
layout_mode = 2
slot_type = 1

[node name="ArmorSlot5" parent="MarginContainer/VBoxContainer/ArmorSlots" instance=ExtResource("2_0wuou")]
layout_mode = 2
slot_type = 1
